Fix working dir

--- a/.github/workflows/main_grpcdemo20231109214059.yml
+++ b/.github/workflows/main_grpcdemo20231109214059.yml
@@ -9,6 +9,12 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: GrpcDemo20231109214059
+  AZURE_WEBAPP_PACKAGE_PATH: src/GrpcDemo/published
+  CONFIGURATION: Release
+  WORKING_DIRECTORY: src/GrpcDemo
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,13 +32,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
 
-      - name: Upload artifact for deployment job
+      - name: Publish Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: webapp
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,8 +53,9 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: .net-app
-      
+          name: webapp
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -60,7 +67,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'GrpcDemo20231109214059'
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
           slot-name: 'Production'
-          package: .
-          
